--- a/adowpf/adowpf/App.config
+++ b/adowpf/adowpf/App.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
-    </startup>
+  <connectionStrings>
+    <add name="Bieren" connectionString="server=(localdb)\MSSQLLocalDB;database=Bieren;integrated security=true" providerName="System.Data.SqlClient"/>
+    <!-- <add name="Bieren" connectionString="provider=Microsoft.ACE.OLEDB.12.0: data source=c:\oefen\bieren.mdb" providerName="System.Data.OleDb" /> -->
+  </connectionStrings>
 </configuration>
