--- a/adowpf/WPFOpgave2/WPFOpgave2.csproj
+++ b/adowpf/WPFOpgave2/WPFOpgave2.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4E7BF83C-4D1C-4BF2-872E-753059EA2104}</ProjectGuid>
+    <ProjectGuid>{7F104E92-3AEF-4662-9566-913396104F9D}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>adowpf</RootNamespace>
-    <AssemblyName>adowpf</AssemblyName>
+    <RootNamespace>WPFOpgave2</RootNamespace>
+    <AssemblyName>WPFOpgave2</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -36,7 +36,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -95,12 +94,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AdoGemeenschap\AdoGemeenschap.csproj">
-      <Project>{735fe107-2f62-4552-b9e1-4416fe2b7fc8}</Project>
-      <Name>AdoGemeenschap</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
