--- a/adowpf/adowpf/App.config
+++ b/adowpf/adowpf/App.config
@@ -3,5 +3,7 @@
   <connectionStrings>
     <add name="Bieren" connectionString="server=(localdb)\MSSQLLocalDB;database=Bieren;integrated security=true" providerName="System.Data.SqlClient"/>
     <!-- <add name="Bieren" connectionString="provider=Microsoft.ACE.OLEDB.12.0: data source=c:\oefen\bieren.mdb" providerName="System.Data.OleDb" /> -->
+    <add name="Bank" connectionString="server=(localdb)\MSSQLLocalDB;database=Bank;integrated security=true" providerName="System.Data.SqlClient"/>
+    <add name="Tuincentrum" connectionString="server=(localdb)\MSSQLLocalDB;database=Bank;integrated security=true" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
