--- a/adowpf/adowpf/App.config
+++ b/adowpf/adowpf/App.config
@@ -5,5 +5,6 @@
     <!-- <add name="Bieren" connectionString="provider=Microsoft.ACE.OLEDB.12.0: data source=c:\oefen\bieren.mdb" providerName="System.Data.OleDb" /> -->
     <add name="Bank" connectionString="server=(localdb)\MSSQLLocalDB;database=Bank;integrated security=true" providerName="System.Data.SqlClient"/>
     <add name="Tuincentrum" connectionString="server=(localdb)\MSSQLLocalDB;database=Bank;integrated security=true" providerName="System.Data.SqlClient"/>
+    <add name="Bank2" connectionString="server=(localdb)\MSSQLLocalDB;database=Bank2;integrated security=true" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
