--- a/adowpf/adowpf/adowpf.csproj
+++ b/adowpf/adowpf/adowpf.csproj
@@ -56,6 +56,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="RekeningInfoRaadplegen.xaml.cs">
+      <DependentUpon>RekeningInfoRaadplegen.xaml</DependentUpon>
+    </Compile>
     <Compile Include="SaldoRekeningRaadplegen.xaml.cs">
       <DependentUpon>SaldoRekeningRaadplegen.xaml</DependentUpon>
     </Compile>
@@ -72,6 +75,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Overschrijven.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="RekeningInfoRaadplegen.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
