--- a/adowpf/AdoGemeenschap/AdoGemeenschap.csproj
+++ b/adowpf/AdoGemeenschap/AdoGemeenschap.csproj
@@ -46,6 +46,8 @@
     <Compile Include="Bank2DbManager.cs" />
     <Compile Include="BankDbManager.cs" />
     <Compile Include="BierenDbManager.cs" />
+    <Compile Include="Brouwers.cs" />
+    <Compile Include="KlantenManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RekeningenManager.cs" />
     <Compile Include="RekeningInfo.cs" />
