--- a/adowpf/adowpf/adowpf.csproj
+++ b/adowpf/adowpf/adowpf.csproj
@@ -56,12 +56,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="KlantToevoegen.xaml.cs">
+      <DependentUpon>KlantToevoegen.xaml</DependentUpon>
+    </Compile>
     <Compile Include="RekeningInfoRaadplegen.xaml.cs">
       <DependentUpon>RekeningInfoRaadplegen.xaml</DependentUpon>
     </Compile>
     <Compile Include="SaldoRekeningRaadplegen.xaml.cs">
       <DependentUpon>SaldoRekeningRaadplegen.xaml</DependentUpon>
     </Compile>
+    <Page Include="KlantToevoegen.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
