--- a/adowpf/AdoGemeenschap/AdoGemeenschap.csproj
+++ b/adowpf/AdoGemeenschap/AdoGemeenschap.csproj
@@ -47,6 +47,7 @@
     <Compile Include="BankDbManager.cs" />
     <Compile Include="BierenDbManager.cs" />
     <Compile Include="Brouwer.cs" />
+    <Compile Include="BrouwerManager.cs" />
     <Compile Include="KlantenManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RekeningenManager.cs" />
