--- a/adowpf/adowpf/adowpf.csproj
+++ b/adowpf/adowpf/adowpf.csproj
@@ -62,6 +62,7 @@
     <Compile Include="OverzichtBrouwers.xaml.cs">
       <DependentUpon>OverzichtBrouwers.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PostCodeRangeRule.cs" />
     <Compile Include="RekeningInfoRaadplegen.xaml.cs">
       <DependentUpon>RekeningInfoRaadplegen.xaml</DependentUpon>
     </Compile>
